# zwire

./: .gitignore  .gitmodules  README.md  package.json
.github/workflows/: ci.yml  homebrew-cask.yml  pages.yml
branding/: zwire.icns
docs/: hud-theme.js  index.html  report.html
extensions/hud-internal/: .gitignore  background.js  blank-newtab.js  cmd-defaults.js  debug-adapter.js  debug-cloak.js  hud.js  manifest.json  offscreen.html  offscreen.js  package.json  palette-cmds.js  pnpm-lock.yaml  redirect-extensions.js  redirect.js  theme.js  (+18 more)
fork/: .gitignore  README.md  apply-patches.sh  args.gn  build.sh  fetch.sh  package.sh
fork/patches/: 0001-tab-shape-hud.patch  0002-ui-colors-hud.patch  0003-ui-font-mono-hud.patch  0004-toolbar-neon-border.patch  0005-omnibox-hud.patch  0006-branding-strings.patch  0007-devtools-hud-theme.patch  0008-allow-framing.patch  0009-ext-command-focus-webcontents.patch  0010-newtab-force-zwire.patch  0015-no-navigation-block.patch  0019-ext-script-webstore.patch  0020-hud-native-menu-colors.patch  0021-hud-native-primitive-colors.patch  0022-audio-eq-output.patch  README.md  series
fork/tests/: dsp_shim.h  dsp_test.cpp  run_dsp_tests.sh
newtab/: background.js  cmd-defaults.js  manifest.json  newtab.css  newtab.html  newtab.js  palette-cmds.js  palette.js  scheme-sync.js  schemes.js  tmux-pane.js
scripts/: check-patch-series.sh  clean.sh  fetch-base.sh  install.sh  localinstall-linux.sh  localinstall-windows.ps1  localinstall.sh  nuke.sh  rebrand-macos.sh  setup-native-host.sh  state-dir.sh  test.sh
theme/: manifest.json
(+80 files in other folders)
